--- a/css/header.css
+++ b/css/header.css
@@ -1,23 +1,11 @@
 
   
-  .hero {
-    height: 100vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat; }
-  
-  .top-bar {
-    padding: .5rem 0;
-    background:#252526; }
-    .top-bar a {
-      color: #e6e6e6
-      ; }
-  
+
   .site-navbar {
     margin-bottom: 0px;
     z-index: 1999;
     position: relative;
+    font-size: 18px;
     width: 100%;
     padding: 1rem; }
     @media (max-width: 991.98px) {
@@ -151,13 +139,13 @@
             opacity: 1; }
   
   .site-mobile-menu {
-    width: 300px;
+    width: 100%;
     position: fixed;
     right: 0;
     z-index: 2000;
     padding-top: 20px;
     background: #fff;
-    height: calc(100vh);
+  
     -webkit-transform: translateX(110%);
     -ms-transform: translateX(110%);
     transform: translateX(110%);
@@ -173,8 +161,8 @@
     .site-mobile-menu .site-mobile-menu-header {
       width: 100%;
       float: left;
-      padding-left: 20px;
-      padding-right: 20px; }
+      padding-left: 40px;
+      padding-right: 40px; }
       .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-close {
         float: right;
         margin-top: 8px; }
