--- a/css/footer.css
+++ b/css/footer.css
@@ -1,70 +1,78 @@
 
+  
 .footer-wrap {
-        margin-top: 40px;
-      padding-top: 43px;
-      background-size: cover;
-  }
-  
-
-
-  .footer-item{
-      color: white;
-      padding-top: 30px;
-      min-width: 30px;
-      float: left;
-      
-  }
- .nav-footer{
-     color: white;
-     padding: 20px 0px 0px 0px;
- }
- .nav-footer > li > a {
-     color: white;
- }
-  .copyright {
-      border-top: 1px solid #111;
-      font-size: 14px;
-      color: #ccc;
-      padding-top: 15px;
-      text-align: center;
-      padding-bottom: 15px;
-      background: #222;
-  }
-  footer .second_class{
-      border-bottom: 1px solid #444;
-      padding-bottom: 25px;
-  }
-  footer .first_class {
-      padding-bottom: 21px;
-      
-  }
-  footer .first_class p, footer .first_class h3{
-      margin: 0 0;
-      
-  }
-  footer{
-      background: #333;
-  }
-  
+ margin-top: 40px;
  
-  footer .round-btn {
-      margin: 15px 4px;}
-      
-  footer dl, ol, ul {
-      padding-left: 5px;
-  }
-      footer li{
-          list-style: none;
-      }
+  background-size: cover;
+}
+.footer-icon{
+    color:white;
+    font-size: 30px;
+}
+
+
+
+.footer-item{
+  color: white;
+  padding-top: 30px;
+  min-width: 30px;
+  float: left;
   
-  @media(max-width:768px){
-      .footer-wrap h3 {
-      margin-top: 27px;}
-      
-      footer .round-btn {
-      margin: 15px 4px;}
+}
+.nav-footer{
+ color: white;
+ padding: 20px 0px 20px 0px;
+}
+.nav-footer > li > a {
+ color: white;
+}
+.copyright {
+  border-top: 1px solid #111;
+  font-size: 14px;
+  color: #ccc;
+  padding-top: 15px;
+  text-align: center;
+  padding-bottom: 15px;
+  background: #222;
+}
+footer .second_class{
+  border-bottom: 1px solid #444;
+  padding-bottom: 25px;
+}
+footer .first_class {
+  padding-bottom: 21px;
+  
+}
+footer .first_class p, footer .first_class h3{
+  margin: 0 0;
+  
+}
+footer{
+  background: #333;
+}
+
+
+footer .round-btn {
+  margin: 15px 4px;}
+  
+footer dl, ol, ul {
+  padding-left: 5px;
+}
+  footer li{
+      list-style: none;
   }
-  @media(max-width:320px){
-  .copyright {
-      font-size: 13px;}
-  }	
+
+@media(max-width:768px){
+  .footer-wrap h3 {
+  margin-top: 27px;}
+  
+  footer .round-btn {
+  margin: 15px 4px;}
+}
+@media(max-width:320px){
+.copyright {
+  font-size: 13px;}
+}	
+.footer-logo{
+    padding: 20px;
+}
