--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,14 @@
 .round-btn {display: inline;height: 50px; width: 50px; background:#fff;border-radius: 50%;float: left;margin: 15px 8px;box-shadow: 2px 2px 5px 0px rgb(82, 0, 67);border: 1px solid;/*border: 1px solid #622657;*/}
 .round-btn a {display: block !important;padding: 5px 0px;font-size: 25px;border-radius: 50%;}
-.round-btn .icon {padding: 0px; font-size: 30px;}
+.round-btn .icon {padding: 0px; font-size: 27px;}
 
 .btn-facebook a {color: #3b5998;padding: 8px 13px;}
 .btn-linkedin a {color: #007bb6;}
 .btn-twitter a{color: #1c9deb;}
 .btn-instagram a{color: #dd3f5c;}
 .btn-whatsapp a{color: #155E54;}
+.btn-tiktok a{color:black;}
+
 .btn-envelop a{color: #D6403A;font-size: 15px; padding: 9px 12px;}
 .standard_header .standard_social_links {margin-left: 1rem;}
   
