--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ body,html{
 
 .login-box{
    padding-top:30px;
+   margin-bottom: 30px;
    padding-bottom:30px;
    border-radius: 8px;
    background-color: white;
@@ -49,6 +50,16 @@ body,html{
      
     color:white;
    
+}
+.card-accordion{
+  border:0px;
+  padding-bottom: 10px;
+  background-color: white;
+
+}
+.accordion-body{
+  font-size: 15px;
+  background-color:#F9F9FB;
 }
 .checkbox{
     background-color:#77D173 ;
@@ -149,4 +160,28 @@ body,html{
   padding-bottom: calc(var(--input-padding-y) / 3);
   font-size: 12px;
   color: #777;
+}
+.header-banner{
+  background-image: 
+  /* top, transparent red */
+  linear-gradient(
+      rgba(0, 0, 0, 0.40),
+      rgba(0, 0, 0, 0.40)
+  ),
+  /* your image */
+  url('../img/header.png');
+  color:white;
+  border-radius: 0px;
+  text-align: center;
+  
+ width: 100%;
+
+ 
+}
+.btn-return{
+  border-radius: 0px;
+
+}
+.logo-s{
+ padding: 20px 0px 20px 0px;
 }
