--- a/css/main.css
+++ b/css/main.css
@@ -162,18 +162,12 @@ body,html{
   color: #777;
 }
 .header-banner{
-  background-image: 
-  /* top, transparent red */
-  linear-gradient(
-      rgba(0, 0, 0, 0.40),
-      rgba(0, 0, 0, 0.40)
-  ),
-  /* your image */
-  url('../img/header.png');
+ 
+  background-color: #5FBD5C;
   color:white;
   border-radius: 0px;
   text-align: center;
-  
+  min-height: 200px;
  width: 100%;
 
  
@@ -184,4 +178,22 @@ body,html{
 }
 .logo-s{
  padding: 20px 0px 20px 0px;
+}
+.header-row{
+  padding:0px ;margin: 0px 0px 40px 0px;
+}
+@media (min-width: 576px) 
+
+{
+.header-box{
+	background-color: #E9ECEF;
+  height: 200px;
+clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
+
+}
+
+}
+
+.header-box{
+  background-color:#E9ECEF;
 }
