--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,4 @@
-.round-btn {display: inline;height: 50px; width: 50px; background:#fff;border-radius: 50%;float: left;margin: 15px 8px;box-shadow: 2px 2px 5px 0px rgb(82, 0, 67);border: 1px solid;/*border: 1px solid #622657;*/}
+.round-btn {display: inline;height: 50px; width: 50px; background:#fff;border-radius: 50%;float: left;margin: 15px 8px;box-shadow: 2px 2px 5px 0px rgb(82, 0, 67);}
 .round-btn a {display: block !important;padding: 5px 0px;font-size: 25px;border-radius: 50%;}
 .round-btn .icon {padding: 0px; font-size: 27px;}
 
@@ -32,7 +32,7 @@
  padding: 20px 0px 20px 0px;
 }
 .nav-footer > li > a {
- color: white;
+ color:black;
 }
 .copyright {
   border-top: 1px solid #111;
@@ -56,8 +56,8 @@ footer .first_class p, footer .first_class h3{
   
 }
 footer{
-  background: #333;
-}
+  background: #ffeded;
+  color: black;
 
 
 footer .round-btn {
