--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 .site-navbar {
   margin-bottom: 0px;
   z-index: 1999;
-  
+  background-color: white;
   position: relative;
   top: 0;
   color:white;
