--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url(' https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css');
+')
 body,html{
     height:100%;
     font-family: 'Open Sans', sans-serif;
@@ -19,7 +20,10 @@ body,html{
    background-size: cover;
 
 }
-
+.login-body{
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
 .layer{
     height: 100%;
     width: 100%;
@@ -239,4 +243,27 @@ text-decoration:none;
 }
 .header-button{
   margin-left: 20px;
+}
+
+.contact-person{
+  position: relative;
+  font-size: 20px;
+  z-index: 1;
+  overflow: hidden;
+  text-align: center;
+}
+.contact-person:before, .contact-person:after {
+  content: '';
+  width: 150px;
+  height: 3px;
+  display:inline-block;
+  background-color: #77D173;
+  vertical-align: 0.3em;
+  margin: 0 -100%;
+}
+.contact-person:before {
+margin-right: 0.75em;
+}
+.contact-person:after {
+margin-left: 0.75em;
 }
