--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body,html{
    
     height: 100px;
     width: 100px;
-    background-color:#78D173;
+    background-color:#FFCC01;
     border-radius: 50%;
     padding:10px 20px 20px 20px;
     
@@ -85,7 +85,7 @@ body,html{
    
 }
 .login-btn{
-   background-color: #77D173;
+   background-color:#FFCC01;
    border:0px;
    height: 40px;
 }
@@ -162,7 +162,7 @@ body,html{
 }
 .header-banner{
  
-  background-color: #5FBD5C;
+  background-color:#FFCC01 ;
   color:white;
   border-radius: 0px;
   text-align: center;
@@ -252,7 +252,7 @@ text-decoration:none;
   width: 150px;
   height: 3px;
   display:inline-block;
-  background-color: #77D173;
+  background-color: #FFCC01;
   vertical-align: 0.3em;
   margin: 0 -100%;
 }
