--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,8 @@ body,html{
 
 .login-box{
    padding-top:30px;
-   margin-bottom: 30px;
+  width: 90%;
+  margin-bottom: 30px;
    padding-bottom:30px;
    border-radius: 8px;
    background-color: white;
@@ -226,7 +227,8 @@ clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
   
 }
 .header-icon{
-  padding:20px;
+  margin-right: 30px;
+  padding:20px 20px 20px 20px;
 }
 .c_link{
   color:white;
