--- a/css/main.css
+++ b/css/main.css
@@ -28,23 +28,46 @@ body,html{
   ),
   /* your image */
   url('../img/signup_bg.jpg');
- 
+  height: 100%;
  background-attachment: fixed;
  background-size: cover;
 }
 
-
-
+.signup-nav{
+ padding: 0px 10px 0px 10px ;
+  margin-top: 10px;
+}
+.s-link{
+  color:black;
+}
+.s-link:hover{
+  color:#FFCC01;
+}
 .login-box{
    padding-top:30px;
   width: 90%;
-  margin-bottom: 30px;
+   
    padding-bottom:30px;
    border-radius: 8px;
    background-color: white;
    box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
    -webkit-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
    -moz-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
+}
+.signup-body{
+ margin-top: 30px;
+ margin-bottom: 30px;
+}
+.signup-box{
+  padding-top:30px;
+ width: 90%;
+ margin-bottom: 50px;
+  padding-bottom:30px;
+  border-radius: 8px;
+  background-color: white;
+  box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
+  -webkit-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
+  -moz-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
 }
 .login-circle{
    
