--- a/css/main.css
+++ b/css/main.css
@@ -349,6 +349,7 @@ margin-left: 0.75em;
   color:rgb(83, 81, 81);
 }
 .c-box{
+  min-height: 120px;
   padding: 10px 0px 10px 0px;
   margin: 20px 0px 20px 0px;
 }
