--- a/css/main.css
+++ b/css/main.css
@@ -365,14 +365,21 @@ margin-left: 0.75em;
 
 
 
+select::-ms-expand {
+  display: none;
+}
 
 
 
 
 
 
-
-
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: '';
+}
 
 
 
