--- a/css/main.css
+++ b/css/main.css
@@ -452,6 +452,10 @@ select {
   min-width: 100px;
   margin-bottom: 10px;
 }
+.top-image{
+  width:200px;
+  height: 300px;
+}
 .card-img-top{
   width: 100%;
   height: 200px;
