--- a/css/main.css
+++ b/css/main.css
@@ -461,7 +461,7 @@ select {
   height: 200px;
 }
 .badge{
-  width: 40px; height: 40px;border-radius: 50%;background-color: #FDCA31;position:relative;top:25px;z-index: 100;font-size: 20px;text-align: center;line-height: 25px;
+  width: 50px; height: 50px;border-radius: 50%;background-color: #FDCA31;position:relative;top:25px;z-index: 100;font-size: 20px;text-align: center;line-height: 40px;
 }
 .why-text{
   text-align: center;
@@ -473,9 +473,50 @@ select {
   padding: 10px 0px 10px 0px;
 }
 .ride-box{
+  width: 100%;
   background-color: white;
-  padding: 20px 20px 20px 20px;
+  padding: 20px;
  width: 100%;
  min-height: 200px;
+ border-radius: 8px;
+ margin-bottom: 10px;
  
+}
+.owl-nav {
+  position: absolute;
+  top: calc(50% - 50px);
+  width: 100%;
+
+}
+
+.owl-nav div {
+  position: absolute;
+  top: 50%;
+  font-size: 50px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%
+}
+
+.owl-prev {
+  all:initial;
+  left: -40px;
+  background-color: transparent !important;
+  color:#FDCA30 !important;
+  font-size: 50px !important;
+ 
+}
+.owl-next {
+ 
+  all:initial;
+  right: -60px;
+  background-color: transparent !important;
+  color:#FDCA30 !important;
+  font-size: 50px !important;
+ 
+ 
+}
+
+.rating-icon{
+  color:rgb(228, 228, 34);
 }
