--- a/css/main.css
+++ b/css/main.css
@@ -463,6 +463,17 @@ select {
 .badge{
   width: 50px; height: 50px;border-radius: 50%;background-color: #FDCA31;position:relative;top:25px;z-index: 100;font-size: 20px;text-align: center;line-height: 40px;
 }
+.promotion-badge{
+  min-width:120px; 
+  height: 30px;
+  background-color: #FDCA31;
+ 
+  font-size: 20px;
+  text-align: center;
+  line-height: 30px;
+  font-weight: bold;
+
+}
 .why-text{
   text-align: center;
 }
