--- a/css/main.css
+++ b/css/main.css
@@ -458,8 +458,10 @@ select {
 }
 .card-img-top{
   width: 100%;
+  object-fit:scale-down;
   height: 200px;
 }
+
 .badge{
   width: 50px; height: 50px;border-radius: 50%;background-color: #FDCA31;position:relative;top:25px;z-index: 100;font-size: 20px;text-align: center;line-height: 40px;
 }
