--- a/css/main.css
+++ b/css/main.css
@@ -376,7 +376,7 @@ margin-left: 0.75em;
 
 
 .top-patner{
-  background-color: rgb(22, 20, 20);padding: 60px 40px 40px 40px;
+  background-color:#34343B;padding: 60px 40px 40px 40px;
 }
 
 
