--- a/css/main.css
+++ b/css/main.css
@@ -424,7 +424,7 @@ select {
  padding: 180px 20px 180px 20px;
 }
 .store-div{
-  padding: 20px;
+  padding: 10px 20px 20px 20px;
 }
 .trending-box{
   min-width: 95%;
@@ -532,4 +532,68 @@ select {
 
 .rating-icon{
   color:rgb(228, 228, 34);
+}
+.wordCarousel {
+  height: 50% !important;
+  font-size: 36px;
+  font-weight: 100;
+  color: #939393;
+ margin-top: 40px;
+      
+  
+}
+.text-animation {
+  overflow: hidden;
+  position: static;
+  float: right;
+  height: 65px;
+  padding-top: 10px;
+  margin-top: -10px;
+}
+.animate-li {
+  list-style: none;
+    font-family: Serif;
+    color: #FDCA31;
+    font-weight: 700;
+    padding: 0 10px;
+    height: 45px;
+    margin-bottom: 45px;
+    display: block;
+}
+
+.flip2 { animation: flip2 6s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+.flip3 { animation: flip3 8s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+.flip4 { animation: flip4 10s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+
+@keyframes flip2 {
+  0% { margin-top: -180px; }
+  5% { margin-top: -90px;  }
+  50% { margin-top: -90px; }
+  55% { margin-top: 0px; }
+  99.99% { margin-top: 0px; }
+  100% { margin-top: -270px; }
+}
+
+@keyframes flip3 {
+  0% { margin-top: -270px; }
+  5% { margin-top: -180px; }
+  33% { margin-top: -180px; }
+  38% { margin-top: -90px; }
+  66% { margin-top: -90px; }
+  71% { margin-top: 0px; }
+  99.99% { margin-top: 0px; }
+  100% { margin-top: -270px; }
+}
+
+@keyframes flip4 {
+  0% { margin-top: -360px; }
+  5% { margin-top: -270px; }
+  25% { margin-top: -270px; }
+  30% { margin-top: -180px; }
+  50% { margin-top: -180px; }
+  55% { margin-top: -90px; }
+  75% { margin-top: -90px; }
+  80% { margin-top: 0px; }
+  99.99% { margin-top: 0px; }
+  100% { margin-top: -270px; }
 }
