--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,19 @@ body,html{
    background-attachment: fixed;
    background-size: cover;
 }
+.forget-page{
+  background-image: 
+  /* top, transparent red */
+  linear-gradient(
+      rgba(0, 0, 0, 0.70),
+      rgba(0, 0, 0, 0.70)
+  ),
+  /* your image */
+  url('../img/forget.jpeg');
+ 
+ background-attachment: fixed;
+ background-size: cover;
+}
 .rider{
   margin-bottom: -50px;
  padding: 50px 40px 90px 40px !important;
@@ -74,6 +87,21 @@ body,html{
    box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
    -webkit-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
    -moz-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
+}
+.forget-box{
+  padding-top:20px;
+ width: 80%;
+ padding-left: 30px;
+ padding-right: 30px;
+  padding-bottom:30px;
+  border-radius: 8px;
+  background-color: white;
+  box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
+  -webkit-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
+  -moz-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
+}
+.forget-body{
+  margin-top: -50px;
 }
 .signup-body{
  margin-top: 30px;
