--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,7 @@ body,html{
    -moz-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
 }
 .forget-box{
+  clear: both;
   padding-top:20px;
  width: 80%;
  padding-left: 30px;
@@ -102,13 +103,18 @@ body,html{
   box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
   -webkit-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
   -moz-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
+ 
 }
 .forget-body{
+  padding: 90px 0px 50px 0px;
   margin-top: -50px;
+  height: auto;
+  clear: both;
 }
 .signup-body{
  margin-top: 30px;
- margin-bottom: 30px;
+ 
+ 
 }
 .signup-box{
   padding-left: 50px;
