--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,11 @@ body,html{
    -webkit-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
    -moz-box-shadow: -1px 2px 10px -3px rgba(0,0,0,0.45);
 }
+@media only screen and (max-width: 600px) {
+  .modal-sm {
+   padding: 50px;
+  }
+}
 .forget-box{
   clear: both;
   padding-top:20px;
