--- a/css/main.css
+++ b/css/main.css
@@ -640,3 +640,7 @@ select {
   99.99% { margin-top: 0px; }
   100% { margin-top: -270px; }
 }
+.change-form{
+  padding-top: 10px;
+  text-align: left !important;
+}
