--- a/css/main.css
+++ b/css/main.css
@@ -114,19 +114,26 @@ body,html{
 .forget-body{
   padding: 90px 0px 50px 0px;
   margin-top: -50px;
-  height: auto;
+  height: 100%;
   clear: both;
 }
 .signup-body{
- margin-top: 30px;
- 
+  padding: 30px 0px 50px 0px;
+  vertical-align: middle;
+
+  
+  clear: both;
+  margin-top: auto;
+margin-bottom: auto;
  
 }
 .signup-box{
+  
   padding-left: 50px;
   padding-right: 50px;
   padding-top:30px;
  width: 90%;
+ height: 100%;
  margin-bottom: 50px;
   padding-bottom:30px;
   border-radius: 8px;
