--- a/css/main.css
+++ b/css/main.css
@@ -393,6 +393,29 @@ margin-right: 0.75em;
 .contact-person:after {
 margin-left: 0.75em;
 }
+.signup-heading{
+  padding:10px 0px 10px 0px;
+  position: relative;
+  font-size: 20px;
+  z-index: 1;
+  overflow: hidden;
+  text-align: center;
+}
+.signup-heading:before, .signup-heading:after {
+  content: '';
+  width: 100%;
+  height: 3px;
+  display:inline-block;
+  background-color: #FFCC01;
+  vertical-align: 0.3em;
+  margin: 0 -100%;
+}
+.signup-heading:before {
+margin-right: 0.75em;
+}
+.signup-heading:after {
+margin-left: 0.75em;
+}
 .card-link > .card-header{
   color:black;
 }
@@ -660,192 +683,4 @@ select {
 .signup2-box {
   padding-top: 40px;
  
-}
-#msform > #progressbar {
-   text-align: center;
-   margin-left: -5px !important;
-}
-#msform > input{
-  text-align: left !important;
-}
-.signup-form{
-  padding:0px 20px 0px 20px;
-}
-
-.next-btn{
-  padding:12px;
-  margin-bottom: 10px;
-  border:0px;
-  background-color: #FDCC02;
-  border-radius: 4px;
-}
-
-#msform fieldset:not(:first-of-type) {
-  display: none
-}
-
-#msform fieldset .form-card {
-  text-align: left;
-  color: #9E9E9E
-}
-
-
-
-
-#msform .action-button {
-  width: 100px;
-  background: skyblue;
-  font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 0px;
-  cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px
-}
-
-#msform .action-button:hover,
-#msform .action-button:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px skyblue
-}
-
-#msform .action-button-previous {
-  width: 100px;
-  background: #616161;
-  font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 0px;
-  cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px
-}
-
-#msform .action-button-previous:hover,
-#msform .action-button-previous:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #616161
-}
-
-select.list-dt {
-  border: none;
-  outline: 0;
-  border-bottom: 1px solid #ccc;
-  padding: 2px 5px 3px 5px;
-  margin: 2px
-}
-
-select.list-dt:focus {
-  border-bottom: 2px solid skyblue
-}
-
-.card {
-  z-index: 0;
-  border: none;
-  border-radius: 0.5rem;
-  position: relative
-}
-
-.fs-title {
-  font-size: 25px;
-  color: #2C3E50;
-  margin-bottom: 10px;
-  font-weight: bold;
-  text-align: left
-}
-
-#progressbar {
-  margin-bottom: 30px;
-  overflow: hidden;
-  color: lightgrey
-}
-
-#progressbar .active {
-  color: #000000
-}
-
-#progressbar li {
-  list-style-type: none;
-  font-size: 12px;
-  width: 25%;
-  float: left;
-  position: relative
-}
-
-#progressbar #account:before {
-  font-family: FontAwesome;
-  content: "\f015"
-}
-
-#progressbar #personal:before {
-  font-family: FontAwesome;
-  content: "\f54e"
-}
-
-#progressbar #payment:before {
-  font-family: FontAwesome;
-  content: "\f007"
-}
-
-#progressbar #confirm:before {
-  font-family: FontAwesome;
-  content: "\f017"
-}
-
-#progressbar li:before {
-  width: 50px;
-  height: 50px;
-  line-height: 45px;
-  display: block;
-  font-size: 18px;
-  color: #ffffff;
-  background: lightgray;
-  border-radius: 50%;
-  margin: 0 auto 10px auto;
-  padding: 2px
-}
-
-#progressbar li:after {
-  content: '';
-  width: 100%;
-  height: 2px;
-  background: lightgray;
-  position: absolute;
-  left: 0;
-  top: 25px;
-  z-index: -1
-}
-
-#progressbar li.active:before,
-#progressbar li.active:after {
-  background: #FDCC02;
-}
-
-.radio-group {
-  position: relative;
-  margin-bottom: 25px
-}
-
-.radio {
-  display: inline-block;
-  width: 204;
-  height: 104;
-  border-radius: 0;
-  background: lightblue;
-  box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.2);
-  box-sizing: border-box;
-  cursor: pointer;
-  margin: 8px 2px
-}
-
-.radio:hover {
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3)
-}
-
-.radio.selected {
-  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1)
-}
-
-.fit-image {
-  width: 100%;
-  object-fit: cover
 }
